# matchstick

./: .gitignore  CMakeLists.txt  LICENSE  README.md
PROX/APPLICATIONS/PROX_CMD/: CMakeLists.txt
PROX/APPLICATIONS/PROX_CMD/src/: main.cpp
PROX/APPLICATIONS/PROX_GUI/: CMakeLists.txt
PROX/APPLICATIONS/PROX_GUI/include/: prox_gui_application.h  prox_gui_draw_aabbs.h  prox_gui_draw_contacts.h  prox_gui_draw_point.h  prox_gui_draw_scene.h  prox_gui_draw_shadowmaps.h  prox_gui_draw_ssao.h  prox_gui_draw_structure_fields.h  prox_gui_draw_vector.h  prox_gui_geometry.h  prox_gui_geometry_manager.h  prox_gui_lighting.h  prox_gui_make_scene.h  prox_gui_make_shader_programs.h  prox_gui_materials.h  prox_gui_scene_manager.h  prox_gui_scene_object.h  prox_gui_select_tool.h  prox_gui_shadowmap_manager.h  prox_gui_shadowmap_object.h  prox_gui_ucph_colors.h  prox_gui_update_scene.h  prox_gui_widget.h
PROX/APPLICATIONS/PROX_GUI/shaders/: aabb_fragment.glsl  aabb_vertex.glsl  contact_fragment.glsl  contact_vertex.glsl  shadow_fragment.glsl  shadow_vertex.glsl  solid_fragment.glsl  solid_vertex.glsl  vector_fragment.glsl  wire_fragment.glsl  wire_geometry.glsl  wire_vertex.glsl
PROX/APPLICATIONS/PROX_GUI/shaders/ssao/: blur_fragment.glsl  geometry_fragment.glsl  geometry_vertex.glsl  lighting_fragment.glsl  lighting_vertex.glsl  ssao_fragment.glsl  ssao_vertex.glsl
PROX/APPLICATIONS/PROX_GUI/src/: main.cpp  prox_gui_widget.cpp
PROX/FOUNDATION/GEOMETRY/GEOMETRY/: CMakeLists.txt
PROX/FOUNDATION/GEOMETRY/GEOMETRY/include/: geometry.h  geometry_convert.h  geometry_inside.h  geometry_is_valid.h  geometry_make_intersection.h  geometry_make_union.h  geometry_transform.h
PROX/FOUNDATION/GEOMETRY/GEOMETRY/src/: geometry.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/: CMakeLists.txt
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_aabb/: CMakeLists.txt  geometry_aabb.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_barycentric/: CMakeLists.txt  geometry_barycentric.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_capsule/: CMakeLists.txt  geometry_capsule.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_closest_point/: CMakeLists.txt  geometry_closest_point.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_closest_points_tetrahedron_tetrahedron/: CMakeLists.txt  geometry_closest_points_tetrahedron_tetrahedron.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_convert/: CMakeLists.txt  geometry_convert.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_cylinder/: CMakeLists.txt  geometry_cylinder.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_direction_table/: CMakeLists.txt  geometry_direction_table.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_dop/: CMakeLists.txt  geometry_dop.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_gauss_map_of_convex_polyhedra/: CMakeLists.txt  geometry_gauss_map_of_convex_polyhedra.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_inside_aabb/: CMakeLists.txt  geometry_inside_aabb.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_inside_cylinder/: CMakeLists.txt  geometry_inside_cylinder.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_inside_dop/: CMakeLists.txt  geometry_inside_dop.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_inside_obb/: CMakeLists.txt  geometry_inside_obb.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_inside_sphere/: CMakeLists.txt  geometry_inside_sphere.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_inside_triangle/: CMakeLists.txt  geometry_inside_triangle.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_interval/: CMakeLists.txt  geometry_interval.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_line/: CMakeLists.txt  geometry_line.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_make_intersection/: CMakeLists.txt  geometry_make_intersection.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_make_union/: CMakeLists.txt  geometry_make_union.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_obb/: CMakeLists.txt  geometry_obb.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_overlap_obb_capsule/: CMakeLists.txt  geometry_overlap_obb_capsule.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_overlap_obb_obb/: CMakeLists.txt  geometry_overlap_obb_obb.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_overlap_tetrahedron_tetrahedron/: CMakeLists.txt  geometry_overlap_tetrahedron_tetrahedron.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_overlap_triangle_triangle/: CMakeLists.txt  geometry_overlap_triangle_triangle.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_plane/: CMakeLists.txt  geometry_plane.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_ray/: CMakeLists.txt  geometry_ray.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_raycast_aabb/: CMakeLists.txt  geometry_raycast_aabb.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_raycast_dop/: CMakeLists.txt  geometry_raycast_dop.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_raycast_obb/: CMakeLists.txt  geometry_raycast_obb.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_raycast_plane/: CMakeLists.txt  geometry_raycast_plane.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_raycast_sphere/: CMakeLists.txt  geometry_raycast_sphere.cpp
PROX/FOUNDATION/GEOMETRY/unit_tests/geometry_sphere/: CMakeLists.txt  (+1 more)
PROX/FOUNDATION/GL3/GL3/: CMakeLists.txt
PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/: CMakeLists.txt
PROX/FOUNDATION/MESH_ARRAY/unit_tests/: CMakeLists.txt
PROX/FOUNDATION/SPARSE/SPARSE/: CMakeLists.txt
PROX/FOUNDATION/SPARSE/unit_tests/: CMakeLists.txt
PROX/FOUNDATION/TINY/TINY/: CMakeLists.txt
PROX/FOUNDATION/TINY/unit_tests/: CMakeLists.txt
PROX/FOUNDATION/UTIL/UTIL/: CMakeLists.txt
PROX/SIMULATION/BROAD/BROAD/: CMakeLists.txt
PROX/SIMULATION/CONTENT/CONTENT/: CMakeLists.txt
PROX/SIMULATION/KDOP/KDOP/: CMakeLists.txt
PROX/SIMULATION/MASS/MASS/: CMakeLists.txt
PROX/SIMULATION/MASS/unit_tests/: CMakeLists.txt
PROX/SIMULATION/NARROW/NARROW/: CMakeLists.txt
PROX/SIMULATION/PROCEDURAL/PROCEDURAL/: CMakeLists.txt
PROX/SIMULATION/PROX/PROX/: CMakeLists.txt
PROX/SIMULATION/PROX/unit_tests/: CMakeLists.txt
(+635 files in other folders)
