INCLUDE_DIRECTORIES( 
  ${Boost_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TinyXML
  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TetGen
  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHull/QHull/include
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/MASS/MASS/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/KDOP/KDOP/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/NARROW/NARROW/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROX/PROX/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/CONTENT/CONTENT/include 
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROCEDURAL/PROCEDURAL/include
  ${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/PROX_CMD/include 
)

FILE(GLOB 
  PROX_CMD_SOURCES
  src/*.cpp 
  )

FILE(GLOB
  PROX_CMD_HEADERS
  include/*.h 
  )

FILE(GLOB
  PROX_CMD_CFGS
  ${PROJECT_SOURCE_DIR}/bin/*.cfg
  )

ADD_EXECUTABLE(
  prox_cmd 
  ${PROX_CMD_SOURCES} 
  ${PROX_CMD_HEADERS}
  ${PROX_CMD_CFGS}
  )

TARGET_LINK_LIBRARIES(
  prox_cmd
  procedural
  content
  tiny
  sparse
  geometry
  mesh_array
  kdop
  narrow
  broad
  prox
  mass
  util
  tetgen
  tinyxml
  qhull
  ${Boost_SYSTEM_LIBRARIES} 
  ${Boost_FILESYSTEM_LIBRARIES} 
  )

SOURCE_GROUP(Config    FILES ${PROX_CMD_CFGS})

SET_TARGET_PROPERTIES(prox_cmd PROPERTIES DEBUG_POSTFIX "D" )
SET_TARGET_PROPERTIES(prox_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/bin")
SET_TARGET_PROPERTIES(prox_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/bin")
SET_TARGET_PROPERTIES(prox_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/bin")
SET_TARGET_PROPERTIES(prox_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/bin")
SET_TARGET_PROPERTIES(prox_cmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/bin")
