SET( CMAKE_INCLUDE_CURRENT_DIR ON                                     )
SET( CMAKE_AUTOMOC ON                                                 )

SET( PROX_GUI_CODE_PATH     "${PROJECT_SOURCE_DIR}/PROX/APPLICATIONS/PROX_GUI"                     )
SET( PROX_GUI_NAME          "prox_gui"                                                             )
SET( PROX_GUI_RUN_PATH      "${PROJECT_SOURCE_DIR}/bin"                                            )
SET( PROX_GUI_OBJS_PATH     "${PROJECT_SOURCE_DIR}/bin/resources/objs"                             )
SET( PROX_GUI_CFGS_PATH     "${PROJECT_SOURCE_DIR}/bin"                                            )

INCLUDE_DIRECTORIES(BEFORE
  ${GLM_INCLUDE_DIR}
  ${GLEW_INCLUDE_DIR}
  ${Boost_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TinyXML
  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TetGen
  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHull/QHull/include
  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/GLM/glm_0_9_5_4/
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GL3/GL3/include    
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include 
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include 
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/MASS/MASS/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/KDOP/KDOP/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/NARROW/NARROW/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROX/PROX/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/CONTENT/CONTENT/include 
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROCEDURAL/PROCEDURAL/include 
  "${PROX_GUI_CODE_PATH}/include"
)

FILE(GLOB 
  PROX_GUI_SOURCES
  src/*.cpp 
  )

FILE(GLOB
  PROX_GUI_HEADERS
  include/*.h 
  )

FILE(GLOB
  PROX_GUI_CFGS
  ${PROX_GUI_CFGS_PATH}/*.cfg
  )

FILE(GLOB
  PROX_GUI_SHADERS
  shaders/*.glsl
  shaders/ssao/*.glsl
  )

#------------------------------------------------------------------------------

ADD_EXECUTABLE(
  ${PROX_GUI_NAME} 
  ${PROX_GUI_SOURCES} 
  ${PROX_GUI_HEADERS}
  ${PROX_GUI_CFGS}
  ${PROX_GUI_SHADERS}
  )

TARGET_LINK_LIBRARIES(
  ${PROX_GUI_NAME}
  gl3
  content
  procedural
  mass
  broad
  narrow
  kdop
  prox
  tiny
  sparse
  geometry
  mesh_array
  util
  tetgen
  tinyxml
  qhull
  Qt5::Widgets
  Qt5::Gui
  Qt5::Core
  Qt5::OpenGL
  ${Boost_SYSTEM_LIBRARIES} 
  ${Boost_FILESYSTEM_LIBRARIES} 
  ${OPENGL_LIBRARIES}
  ${GLEW_LIBRARIES}
  )

SOURCE_GROUP(Config    FILES ${PROX_GUI_CFGS})
SOURCE_GROUP(Shaders   FILES ${PROX_GUI_SHADERS} )


SET_TARGET_PROPERTIES(${PROX_GUI_NAME} PROPERTIES DEBUG_POSTFIX "D" )

SET_TARGET_PROPERTIES(${PROX_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY                "${PROX_GUI_RUN_PATH}")
SET_TARGET_PROPERTIES(${PROX_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${PROX_GUI_RUN_PATH}")
SET_TARGET_PROPERTIES(${PROX_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${PROX_GUI_RUN_PATH}")
SET_TARGET_PROPERTIES(${PROX_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${PROX_GUI_RUN_PATH}")
SET_TARGET_PROPERTIES(${PROX_GUI_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROX_GUI_RUN_PATH}")
