ADD_SUBDIRECTORY( geometry_raycast_aabb        )
ADD_SUBDIRECTORY( geometry_raycast_plane       )
ADD_SUBDIRECTORY( geometry_raycast_dop         )
ADD_SUBDIRECTORY( geometry_raycast_triangle    )
ADD_SUBDIRECTORY( geometry_raycast_tetrahedron )
ADD_SUBDIRECTORY( geometry_raycast_sphere      )
ADD_SUBDIRECTORY( geometry_inside_dop          )
ADD_SUBDIRECTORY( geometry_raycast_obb         )
ADD_SUBDIRECTORY( geometry_inside_sphere       )
ADD_SUBDIRECTORY( geometry_inside_aabb         )
ADD_SUBDIRECTORY( geometry_inside_cylinder     )
ADD_SUBDIRECTORY( geometry_inside_obb          )
ADD_SUBDIRECTORY( geometry_inside_triangle     )
ADD_SUBDIRECTORY( geometry_convert             )
ADD_SUBDIRECTORY( geometry_plane               )
ADD_SUBDIRECTORY( geometry_line                )
ADD_SUBDIRECTORY( geometry_make_intersection   )
ADD_SUBDIRECTORY( geometry_closest_point       )
ADD_SUBDIRECTORY( geometry_barycentric         )
ADD_SUBDIRECTORY( geometry_direction_table     )
ADD_SUBDIRECTORY( geometry_interval            )
ADD_SUBDIRECTORY( geometry_dop                 )
ADD_SUBDIRECTORY( geometry_sphere              )
ADD_SUBDIRECTORY( geometry_ray                 )
ADD_SUBDIRECTORY( geometry_aabb                )
ADD_SUBDIRECTORY( geometry_capsule             )
ADD_SUBDIRECTORY( geometry_cylinder            )
ADD_SUBDIRECTORY( geometry_obb                 )
ADD_SUBDIRECTORY( geometry_tetrahedron         )
ADD_SUBDIRECTORY( geometry_triangle            )
ADD_SUBDIRECTORY( geometry_make_union          )
ADD_SUBDIRECTORY( geometry_transform           )
ADD_SUBDIRECTORY( geometry_overlap_obb_obb     )
ADD_SUBDIRECTORY( geometry_overlap_obb_capsule             )
ADD_SUBDIRECTORY( geometry_overlap_tetrahedron_tetrahedron )
ADD_SUBDIRECTORY( geometry_overlap_triangle_triangle       )
ADD_SUBDIRECTORY( geometry_gauss_map_of_convex_polyhedra   )
ADD_SUBDIRECTORY( geometry_closest_points_tetrahedron_tetrahedron   )
