#------------------------------------------------------------------------------
INCLUDE_DIRECTORIES( 
  ${OPENGL_INCLUDE_DIR}
  ${GLEW_INCLUDE_DIR}
  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/GLM/glm_0_9_5_4/
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GL3/GL3/include
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
)

FILE(
  GLOB
  GL3_SOURCES
  src/*.cpp
  )

FILE(
  GLOB
  GL3_HEADERS
  include/*.h
  )

ADD_LIBRARY(
  gl3
  ${GL3_SOURCES}
  ${GL3_HEADERS}
  )

TARGET_LINK_LIBRARIES(
  gl3
  ${OPENGL_LIBRARIES}
  ${GLEW_LIBRARIES}
  tiny
  geometry
  mesh_array
  util
  )

SET_TARGET_PROPERTIES(gl3 PROPERTIES DEBUG_POSTFIX "D" )

SET_TARGET_PROPERTIES(gl3 PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(gl3 PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(gl3 PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(gl3 PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(gl3 PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
