INCLUDE_DIRECTORIES( 
  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHULL/QHULL/include
  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TetGen
  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TinyXML
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include/factory
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include
  ${Boost_INCLUDE_DIRS}
  )

FILE(
  GLOB
  MESH_ARRAY_SOURCES
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/src/*.cpp
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/src/factory/*.cpp
  )
  
FILE(
  GLOB
  MESH_ARRAY_HEADERS
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include/*.h
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include/factory/*.h
  )

ADD_LIBRARY(
  mesh_array
  ${MESH_ARRAY_SOURCES}
  ${MESH_ARRAY_HEADERS}
  )

TARGET_LINK_LIBRARIES(
  mesh_array
  ${Boost_SYSTEM_LIBRARY}
  ${Boost_FILESYSTEM_LIBRARY}
  tiny
  util
  qhull
  tinyxml
  tetgen
)

SET_TARGET_PROPERTIES(mesh_array PROPERTIES DEBUG_POSTFIX "D" )

SET_TARGET_PROPERTIES(mesh_array PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(mesh_array PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(mesh_array PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(mesh_array PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(mesh_array PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
