ADD_SUBDIRECTORY( mesh_array_tetrahedron           )
ADD_SUBDIRECTORY( mesh_array_triangle              )
ADD_SUBDIRECTORY( mesh_array_vertex                )
ADD_SUBDIRECTORY( mesh_array_mesh                  )
ADD_SUBDIRECTORY( mesh_array_vertex_attribute      )
ADD_SUBDIRECTORY( mesh_array_triangle_attribute    )
ADD_SUBDIRECTORY( mesh_array_tetrahedron_attribute )
ADD_SUBDIRECTORY( mesh_array_io                    )
ADD_SUBDIRECTORY( mesh_array_vertex_ring           )
ADD_SUBDIRECTORY( mesh_array_adjacency             )
ADD_SUBDIRECTORY( mesh_array_circulator            )
ADD_SUBDIRECTORY( mesh_array_tetgen                )
ADD_SUBDIRECTORY( mesh_array_orientation           )
ADD_SUBDIRECTORY( mesh_array_compute_surface_map   )
