ADD_SUBDIRECTORY( sparse_block                 )
ADD_SUBDIRECTORY( sparse_vector                )
ADD_SUBDIRECTORY( sparse_diagonal_matrix       )
ADD_SUBDIRECTORY( sparse_two_column_matrix     )
ADD_SUBDIRECTORY( sparse_compressed_row_matrix )
ADD_SUBDIRECTORY( sparse_transpose_block       )
ADD_SUBDIRECTORY( sparse_transpose_crm         )
ADD_SUBDIRECTORY( sparse_fake_transpose        )
ADD_SUBDIRECTORY( sparse_product_block         )
ADD_SUBDIRECTORY( sparse_product_crm_vec       )
ADD_SUBDIRECTORY( sparse_product_crm_crm       )
ADD_SUBDIRECTORY( sparse_diag_of_prod          )
ADD_SUBDIRECTORY( sparse_prod_2cm_vec          )
ADD_SUBDIRECTORY( sparse_sum                   )
ADD_SUBDIRECTORY( sparse_io                    )
ADD_SUBDIRECTORY( sparse_element_prod          )
ADD_SUBDIRECTORY( sparse_inverse               )
ADD_SUBDIRECTORY( sparse_row_product           )
ADD_SUBDIRECTORY( sparse_column_product        )
ADD_SUBDIRECTORY( sparse_compressed_vector     )
ADD_SUBDIRECTORY( sparse_conjugate_gradient    )
