INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include
  )

FILE(
  GLOB
  TINY_SOURCES
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/src/*.cpp
  )

FILE(
  GLOB
  TINY_HEADERS
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include/*.h
  )

ADD_LIBRARY(
  tiny
  ${TINY_SOURCES}
  ${TINY_HEADERS}
  )

SET_TARGET_PROPERTIES(tiny PROPERTIES DEBUG_POSTFIX "D" )

SET_TARGET_PROPERTIES(tiny PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(tiny PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(tiny PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(tiny PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(tiny PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")

