ADD_SUBDIRECTORY( tiny_axis_angle          )
ADD_SUBDIRECTORY( tiny_basic_math_types    )
ADD_SUBDIRECTORY( tiny_clamp               )
ADD_SUBDIRECTORY( tiny_container           )
ADD_SUBDIRECTORY( tiny_contiguous_interval )
ADD_SUBDIRECTORY( tiny_coordsys_prod       )
ADD_SUBDIRECTORY( tiny_covariance3x3       )
ADD_SUBDIRECTORY( tiny_degrees_and_radians )
ADD_SUBDIRECTORY( tiny_eigen               )
ADD_SUBDIRECTORY( tiny_euler_angles        )
ADD_SUBDIRECTORY( tiny_invert4x4           )
ADD_SUBDIRECTORY( tiny_matrix_algebra      )
ADD_SUBDIRECTORY( tiny_norm_1              )
ADD_SUBDIRECTORY( tiny_polar_decomposition )
ADD_SUBDIRECTORY( tiny_polynomial_roots    )
ADD_SUBDIRECTORY( tiny_power2              )
ADD_SUBDIRECTORY( tiny_precision           )
ADD_SUBDIRECTORY( tiny_prime_numbers       )
ADD_SUBDIRECTORY( tiny_quaternion_algebra  )
ADD_SUBDIRECTORY( tiny_quaternion_rotate   )
ADD_SUBDIRECTORY( tiny_traits              )
ADD_SUBDIRECTORY( tiny_trilinear           )
ADD_SUBDIRECTORY( tiny_types               )
ADD_SUBDIRECTORY( tiny_vector_algebra      )
ADD_SUBDIRECTORY( tiny_truncate            )
