INCLUDE_DIRECTORIES( 
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include
  )

FILE(GLOB
  BROAD_SOURCES
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/src/*.cpp 
  )

FILE(GLOB
  BROAD_HEADERS
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include/*.h 
  )

ADD_LIBRARY( 
  broad 
  ${BROAD_SOURCES} 
  ${BROAD_HEADERS}
  )

SET_TARGET_PROPERTIES(broad PROPERTIES DEBUG_POSTFIX "D" )

SET_TARGET_PROPERTIES(broad PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(broad PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(broad PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(broad PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(broad PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")

