INCLUDE_DIRECTORIES( 
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include 
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/MASS/MASS/include 
  ${Boost_INCLUDE_DIRS} 
)

FILE(
  GLOB
  MASS_SOURCES
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/MASS/MASS/src/*.cpp
  )

FILE(
  GLOB
  MASS_HEADERS
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/MASS/MASS/include/*.h
  )

ADD_LIBRARY( mass ${MASS_SOURCES} ${MASS_HEADERS} )

TARGET_LINK_LIBRARIES(
  mass
  tiny
)

SET_TARGET_PROPERTIES(mass PROPERTIES DEBUG_POSTFIX "D" )

SET_TARGET_PROPERTIES(mass PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(mass PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(mass PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(mass PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(mass PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")
