ADD_SUBDIRECTORY( mass_box         )
ADD_SUBDIRECTORY( mass_capsule     )
ADD_SUBDIRECTORY( mass_cone        )
ADD_SUBDIRECTORY( mass_cylinder    )
ADD_SUBDIRECTORY( mass_density     )
ADD_SUBDIRECTORY( mass_ellipsoid   )
ADD_SUBDIRECTORY( mass_mesh        )
ADD_SUBDIRECTORY( mass_rotate      )
ADD_SUBDIRECTORY( mass_sphere      )
ADD_SUBDIRECTORY( mass_tetrahedron )
ADD_SUBDIRECTORY( mass_translate   )
ADD_SUBDIRECTORY( mass_conical     )
ADD_SUBDIRECTORY( mass_properties  )
ADD_SUBDIRECTORY( mass_transform   )

