INCLUDE_DIRECTORIES(
  ${Boost_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TinyXML
  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/TetGen
  ${PROJECT_SOURCE_DIR}/PROX/3RDPARTY/QHull/QHull/include
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/UTIL/UTIL/include
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/TINY/TINY/include
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/GEOMETRY/GEOMETRY/include
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/MESH_ARRAY/MESH_ARRAY/include
  ${PROJECT_SOURCE_DIR}/PROX/FOUNDATION/SPARSE/SPARSE/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/CONTENT/CONTENT/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/MASS/MASS/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/KDOP/KDOP/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/BROAD/BROAD/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/NARROW/NARROW/include
  ${PROJECT_SOURCE_DIR}/PROX/SIMULATION/PROX/PROX/include  
)

FILE(GLOB 
  PROX_SOURCES 
  src/*.cpp
  )

FILE(GLOB
  PROX_HEADERS
  include/*.h
  include/steppers/*.h
  include/solvers/*.h
  include/solvers/sub/*.h
  include/solvers/strategies/*.h
  )

ADD_LIBRARY( 
  prox 
  ${PROX_SOURCES}  
  ${PROX_HEADERS}
)

TARGET_LINK_LIBRARIES(
  prox
  content
  tiny
  sparse
  geometry
  mesh_array
  kdop
  narrow
  broad
  mass
  util
  tetgen
  tinyxml
  qhull
)

SET_TARGET_PROPERTIES(prox PROPERTIES DEBUG_POSTFIX "D" )

SET_TARGET_PROPERTIES(prox PROPERTIES ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(prox PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(prox PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(prox PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${PROJECT_SOURCE_DIR}/lib/")
SET_TARGET_PROPERTIES(prox PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/lib/")

FILE(GLOB
  PROX_NARROW
  include/narrow/*.h
  )

FILE(GLOB
  PROX_SOLVERS
  include/solvers/*.h
  include/solvers/sub/*.h
  include/solvers/strategies/*.h
  )

FILE(GLOB
  PROX_STEPPERS
  include/steppers/*.h
  )

SOURCE_GROUP(narrow    FILES ${PROX_NARROW})
SOURCE_GROUP(steppers  FILES ${PROX_STEPPERS})
SOURCE_GROUP(solvers   FILES ${PROX_SOLVERS})
